k8s/istio/virtual-services/default-http.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-virtualservice
spec:
  hosts:
  - gke.devopstar.com
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus-server
        port:
          number: 80
  - match:
    - uri:
        prefix: /grafana/
    route:
    - destination:
        host: grafana
        port:
          number: 80
    rewrite:
      uri: /
---
